--- a/site-html/aula.html
+++ b/site-html/aula.html
@@ -9,19 +9,20 @@
 </head>
 <body>
     <head class="cabecalho">
-        <img class="cabecalho-imagem" src="alura-start.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="download.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </head>
-<section class="escola"></section>
+<section class="escola">
 <div class="escola-div-conteudo"></div>
     <h2 class="escola-titulo">Sobre a escola</h2>
     <p class="escola-texto-1">O Colégio Estadual Lindoeste está localizada na Rua Curitiba, 400 Lindoeste-PR.Somos uma empresa séria e confiável, que oferece qualidade e excelencia no atendimento aus seus alunos e responsáveis. Venha conhecer o Colégio Estadual Lindoeste. </p>
     <p class="escola-texto-2">A turma mais famosa é a Segunda Série B. Nossa turna tem 22 alunos. Nossa sala está sendo considerada a mais quieta do colégio.</p>
 </div>
 <img class="escola-imagem" img src="End of school-rafiki.png" alt="alunos em uma sala">
+</section>
 </body>
 
 </html>
