--- a/site-html/aula.html
+++ b/site-html/aula.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="'stylesheet" href="style.css">
+
 </head>
 <body>
     <head class="cabecalho">
@@ -14,68 +15,14 @@
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
-    </head>
-<section class="escola"><!DOCTYPE html>
-2
-<html lang="en">
-3
-<head>
-4
-    <meta charset="UTF-8">
-5
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-6
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-7
-    <title>Document</title>
-8
-    <link rel="'stylesheet" href="style.css">
-9
-</head>
-10
-<body>
-11
-    <head class="cabecalho">
-12
-        <img class="cabecalho-imagem" src="alura-start.png" alt="logo da alura start">
-13
-        <ul class="cabecalho-lista">
-14
-            <li class="cabecalho-lista-item">Escola</li>
-15
-            <li class="cabecalho-lista-item">Estudante</li>
-16
-        </ul>
-17
-    </head>
-18
-<section class="escola"></section>
-19
-<div class="escola-div-conteudo"></div>
-20
-    <h2 class="escola-titulo">Sobre a escola</h2>
-21
-    <p class="escola-texto-1">O Colégio Estadual Lindoeste está localizada na Rua Curitiba, 400 Lindoeste-PR.Somos uma empresa séria e confiável, que oferece qualidade e excelencia no atendimento aus seus alunos e responsáveis. Venha conhecer o Colégio Estadual Lindoeste. </p>
-22
-    <p class="escola-texto-2">A turma mais famosa é a Segunda Série B. Nossa turna tem 22 alunos. Nossa sala está sendo considerada a mais quieta do colégio.</p>
-23
-</div>
-24
-<img class="escola-imagem" img src="End of school-rafiki.png" alt="alunos em uma sala">
-25
-</body>
-26
-​
-27
-</html>
-28
+    </header>
 
 <div class="escola-div-conteudo"></div>
     <h2 class="escola-titulo">Sobre a escola</h2>
     <p class="escola-texto-1">O Colégio Estadual Lindoeste está localizada na Rua Curitiba, 400 Lindoeste-PR.Somos uma empresa séria e confiável, que oferece qualidade e excelencia no atendimento aus seus alunos e responsáveis. Venha conhecer o Colégio Estadual Lindoeste. </p>
     <p class="escola-texto-2">A turma mais famosa é a Segunda Série B. Nossa turna tem 22 alunos. Nossa sala está sendo considerada a mais quieta do colégio.</p>
 </div>
-<img class="escola-imagem" img src="End of school-rafiki.png" alt="alunos em uma sala">
+<img class="escola-imagem" img src="foto.png" alt="alunos em uma sala">
 </section>
 </body>
 
