--- a/site-html/Leticia-Cassol-2B-main/site-html/aula.html
+++ b/site-html/Leticia-Cassol-2B-main/site-html/aula.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="'stylesheet" href="style.css">
-
 </head>
 <body>
     <head class="cabecalho">
@@ -15,15 +14,104 @@
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
-    </header>
-
+    </head>
+<section class="escola">
 <div class="escola-div-conteudo"></div>
     <h2 class="escola-titulo">Sobre a escola</h2>
     <p class="escola-texto-1">O Colégio Estadual Lindoeste está localizada na Rua Curitiba, 400 Lindoeste-PR.Somos uma empresa séria e confiável, que oferece qualidade e excelencia no atendimento aus seus alunos e responsáveis. Venha conhecer o Colégio Estadual Lindoeste. </p>
     <p class="escola-texto-2">A turma mais famosa é a Segunda Série B. Nossa turna tem 22 alunos. Nossa sala está sendo considerada a mais quieta do colégio.</p>
 </div>
-<img class="escola-imagem" img src="foto.png" alt="alunos em uma sala">
+<img class="escola-imagem" img src="End of school-rafiki.png" alt="alunos em uma sala">
 </section>
 </body>
 
+</html>
+<section id="estudante">
+    <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+    <div class="estudante-todos">
+        <span></span>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="IMG-20230330-WA0001.jpg" alt="foto de Leticia">
+        <h3 class="estudante-nome">Leticia Cassol</h3>
+        <a href=""><img class="estudante-icone" src=""
+            alt="icone instagram"></a>
+            <a hred="https://instagram.com/cassolleticia?igshid=ZDdkNTZiNTM="><img class="" src=""
+                alt=""></a>
+    </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="IMG-20230330-WA0000.jpg" alt="foto de Emanuelly">
+            <h3 class="estudante-nome">Emanuelly</h3>
+            <a href=""><img class="estudante-icone" src=""
+                alt="icone instagram"></a>
+                <a hred="https://instagram.com/emanuelly_ferreira29?igshid=YmMyMTA2M2Y="><img class="" src=""
+                    alt=""></a>
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="IMG-20230330-WA0003.jpg" alt="foto de Gabrielly">
+        <h3 class="estudante-nome">Gabrielly</h3>
+        <a href=""><img class="estudante-icone" src=""
+            alt="icone instagram"></a>
+            <a hred="https://instagram.com/alves123gabrielly?igshid=YmMyMTA2M2Y="><img class="" src=""
+                alt=""></a>
+    </div>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+<!DOCTYPE html>
+2
+<html lang="en">
+3
+<head>
+4
+    <meta charset="UTF-8">
+5
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+6
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+7
+    <title>Document</title>
+8
+    <link rel="'stylesheet" href="style.css">
+9
+​
+10
+</head>
+11
+<body>
+12
+    <head class="cabecalho">
+13
+        <img class="cabecalho-imagem" src="download.png" alt="logo da alura start">
+14
+        <ul class="cabecalho-lista">
+15
+            <li class="cabecalho-lista-item">Escola</li>
+16
+            <li class="cabecalho-lista-item">Estudante</li>
+17
+        </ul>
+18
+    </header>
+19
+​
+20
+<div class="escola-div-conteudo"></div>
+21
+    <h2 class="escola-titulo">Sobre a escola</h2>
+22
+    <p class="escola-texto-1">O Colégio Estadual Lindoeste está localizada na Rua Curitiba, 400 Lindoeste-PR.Somos uma empresa séria e confiável, que oferece qualidade e excelencia no atendimento aus seus alunos e responsáveis. Venha conhecer o Colégio Estadual Lindoeste. </p>
+23
+    <p class="escola-texto-2">A turma mais famosa é a Segunda Série B. Nossa turna tem 22 alunos. Nossa sala está sendo considerada a mais quieta do colégio.</p>
+24
+</div>
+25
+<img class="escola-imagem" img src="foto.png" alt="alunos em uma sala">
+26
+</section>
+27
+</body>
+28
+​
+29
 </html>
