--- a/site-html/Leticia-Cassol-2B-main/site-html/aula.html
+++ b/site-html/Leticia-Cassol-2B-main/site-html/aula.html
@@ -38,7 +38,7 @@
         <h3 class="estudante-nome">Leticia Cassol</h3>
         <a href="https://github.com/LeticiaCassol/Leticia-Cassol-2B/tree/main/site-html/Leticia-Cassol-2B-main/site-html"><img class="estudante-icone" src="github.png"
             alt="icone instagrhttps://github.com/LeticiaCassol/Leticia-Cassol-2B/tree/main/site-html/Leticia-Cassol-2B-mainam"></a>
-            <a hred="https://instagram.com/cassolleticia?igshid=ZDdkNTZiNTM="><img class="" src=""
+            <a hred="https://instagram.com/cassolleticia?igshid=ZDdkNTZiNTM="><img class="estudante-icone" src="instagram.png"
                 alt=""></a>
     </div>
         <div class="estudante-div">
@@ -46,7 +46,7 @@
             <h3 class="estudante-nome">Emanuelly</h3>
             <a href="https://github.com/emanuelly29"><img class="estudante-icone" src=""
                 alt="icone instagram"></a>
-                <a hred="https://instagram.com/emanuelly_ferreira29?igshid=YmMyMTA2M2Y="><img class="" src=""
+                <a hred="https://instagram.com/emanuelly_ferreira29?igshid=YmMyMTA2M2Y="><img class="estudante-icone" src="instagram.png"
                     alt=""></a>
     </div>
     <div class="estudante-div">
@@ -54,7 +54,14 @@
         <h3 class="estudante-nome">Gabrielly</h3>
         <a href=""><img class="estudante-icone" src=""
             alt="icone instagram"></a>
-            <a hred="https://instagram.com/alves123gabrielly?igshid=YmMyMTA2M2Y="><img class="" src=""
+            <a hred="https://instagram.com/alves123gabrielly?igshid=YmMyMTA2M2Y="><img class="estudante-icone" src="instagram.png"
                 alt=""></a>
     </div>
     <span></span>
+
+    <footer class="rodape">
+        <img class="rodape-imagem" src="" alt="logo da alurastart">
+    </footer>
+    </body>
+
+    </html>
