--- a/site-html/Leticia-Cassol-2B-main/site-html/aula.html
+++ b/site-html/Leticia-Cassol-2B-main/site-html/aula.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="'stylesheet" href="style.css">
 </head>
 <body>
     <head class="cabecalho">
@@ -19,7 +16,7 @@
         </ul>
     </head>
 <section class="escola">
-<div class="escola-div-conteudo">
+<div class="escola-div-conteudo"></div>
     <h2 class="escola-titulo">Sobre a escola</h2>
     <p class="escola-texto-1">O Colégio Estadual Lindoeste está localizada na Rua Curitiba, 400 Lindoeste-PR.Somos uma empresa séria e confiável, que oferece qualidade e excelencia no atendimento aus seus alunos e responsáveis. Venha conhecer o Colégio Estadual Lindoeste. </p>
     <p class="escola-texto-2">A turma mais famosa é a Segunda Série B. Nossa turna tem 22 alunos. Nossa sala está sendo considerada a mais quieta do colégio.</p>
@@ -36,17 +33,17 @@
     <div class="estudante-div">
         <img class="estudante-imagem" src="IMG-20230330-WA0001.jpg" alt="foto de Leticia">
         <h3 class="estudante-nome">Leticia Cassol</h3>
-        <a href="https://github.com/LeticiaCassol/Leticia-Cassol-2B/tree/main/site-html/Leticia-Cassol-2B-main/site-html"><img class="estudante-icone" src="github.png"
-            alt="icone instagrhttps://github.com/LeticiaCassol/Leticia-Cassol-2B/tree/main/site-html/Leticia-Cassol-2B-mainam"></a>
-            <a hred="https://instagram.com/cassolleticia?igshid=ZDdkNTZiNTM="><img class="estudante-icone" src="instagram.png"
+        <a href=""><img class="estudante-icone" src=""
+            alt="icone instagram"></a>
+            <a hred="https://instagram.com/cassolleticia?igshid=ZDdkNTZiNTM="><img class="" src=""
                 alt=""></a>
     </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="IMG-20230330-WA0000.jpg" alt="foto de Emanuelly">
             <h3 class="estudante-nome">Emanuelly</h3>
-            <a href="https://github.com/emanuelly29"><img class="estudante-icone" src=""
+            <a href=""><img class="estudante-icone" src=""
                 alt="icone instagram"></a>
-                <a hred="https://instagram.com/emanuelly_ferreira29?igshid=YmMyMTA2M2Y="><img class="estudante-icone" src="instagram.png"
+                <a hred="https://instagram.com/emanuelly_ferreira29?igshid=YmMyMTA2M2Y="><img class="" src=""
                     alt=""></a>
     </div>
     <div class="estudante-div">
@@ -54,14 +51,67 @@
         <h3 class="estudante-nome">Gabrielly</h3>
         <a href=""><img class="estudante-icone" src=""
             alt="icone instagram"></a>
-            <a hred="https://instagram.com/alves123gabrielly?igshid=YmMyMTA2M2Y="><img class="estudante-icone" src="instagram.png"
+            <a hred="https://instagram.com/alves123gabrielly?igshid=YmMyMTA2M2Y="><img class="" src=""
                 alt=""></a>
     </div>
     <span></span>
-
-    <footer class="rodape">
-        <img class="rodape-imagem" src="" alt="logo da alurastart">
-    </footer>
-    </body>
-
-    </html>
+    <span></span>
+    <span></span>
+    <span></span>
+<!DOCTYPE html>
+2
+<html lang="en">
+3
+<head>
+4
+    <meta charset="UTF-8">
+5
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+6
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+7
+    <title>Document</title>
+8
+    <link rel="'stylesheet" href="style.css">
+9
+​
+10
+</head>
+11
+<body>
+12
+    <head class="cabecalho">
+13
+        <img class="cabecalho-imagem" src="download.png" alt="logo da alura start">
+14
+        <ul class="cabecalho-lista">
+15
+            <li class="cabecalho-lista-item">Escola</li>
+16
+            <li class="cabecalho-lista-item">Estudante</li>
+17
+        </ul>
+18
+    </header>
+19
+​
+20
+<div class="escola-div-conteudo"></div>
+21
+    <h2 class="escola-titulo">Sobre a escola</h2>
+22
+    <p class="escola-texto-1">O Colégio Estadual Lindoeste está localizada na Rua Curitiba, 400 Lindoeste-PR.Somos uma empresa séria e confiável, que oferece qualidade e excelencia no atendimento aus seus alunos e responsáveis. Venha conhecer o Colégio Estadual Lindoeste. </p>
+23
+    <p class="escola-texto-2">A turma mais famosa é a Segunda Série B. Nossa turna tem 22 alunos. Nossa sala está sendo considerada a mais quieta do colégio.</p>
+24
+</div>
+25
+<img class="escola-imagem" img src="foto.png" alt="alunos em uma sala">
+26
+</section>
+27
+</body>
+28
+​
+29
+</html>
